<resources>
    <string name="app_name_release">Транспорт</string>
    <string name="app_name_dev">Транспорт-DEV</string>
    <string name="google_maps_api_key">Insert your API key here</string>
    <string name="common_action_send">Отправить</string>
    <string name="common_action_repeat">Повторить</string>
    <string name="title_news">Новости</string>
    <string name="title_transport">Транспорт</string>
    <string name="title_routes">Маршруты</string>
    <string name="title_schedule">Расписание</string>
    <string name="title_transport_online">Транспорт Онлайн</string>
    <string name="title_help">Справка</string>
    <string name="title_transport_card">Транспортная Карта</string>
    <string name="title_complain">Пожаловаться</string>
    <string name="title_about">О Проекте</string>
    <string name="title_menu">Меню</string>
    <string name="logo_subtitle">Весь транспорт Южной столицы</string>
    <string name="navigation_drawer_open">Открыть</string>
    <string name="navigation_drawer_close">Закрыть</string>
    <string name="nav_item_news">@string/title_news</string>
    <string name="nav_item_transport">@string/title_transport</string>
    <string name="nav_item_routes">@string/title_routes</string>
    <string name="nav_item_schedule">@string/title_schedule</string>
    <string name="nav_item_transport_online">@string/title_transport_online</string>
    <string name="nav_item_help">@string/title_help</string>
    <string name="nav_item_transport_card">@string/title_transport_card</string>
    <string name="nav_item_complain">@string/title_complain</string>
    <string name="nav_item_about">@string/title_about</string>
    <string name="nav_item_menu">@string/title_menu</string>
    <string name="news_post_menu_action_open_in_browser">Открыть в браузере</string>
    <string name="routes_tab_title_shuttle">Маршрутки</string>
    <string name="routes_tab_title_bus">Автобусы</string>
    <string name="routes_tab_title_trolleybus">Троллейбусы</string>
    <string name="routes_tab_title_tram">Трамваи</string>
    <string name="help_tab_title_departments">Департаменты</string>
    <string name="help_tab_title_stations">Вокзалы</string>
    <string name="help_tab_title_business">Перевозчики</string>
    <string name="card_tab_title_info">Информация</string>
    <string name="card_tab_title_buy">Где купить</string>
    <string name="card_tab_title_deposit">Где пополнить</string>
    <string name="card_tab_title_questions">Вопросы</string>
    <string name="card_title_buy">Где купить карту</string>
    <string name="card_title_deposit">Где пополнить карту</string>
    <string name="card_info_title">Почему важно использовать транспортную карту?</string>
    <string name="card_info_content">Безналичная система оплаты с помощью транспортных карт — это очень важно для города и для пассажиров:\n\n
        1. Контроль и учёт. «Безнал» — это, в первую очередь, прозрачные финансовые потоки. Недобросовестным перевозчикам (если вдруг такие есть) уже не удастся скрыть ни одного рубля выручки — всё проводится через банк, на всё есть строгая отчетность. Все льготные пассажиры также будут учтены (соответственно, никаких необоснованных выплат перевозчикам из бюджетов), а пассажиропоток можно будет легко исследовать.\n\n
        2. Безопасность. Водитель не отвлекается на прием денег, выдачу сдачи и билетов.\n\n
        3. Быстрота и удобство. Больше не потребуется искать деньги при входе в транспорт, ждать сдачу и задерживать этим других пассажиров. Посадка будет происходить быстрее, а значит время поездки сократится.\n\n
        4. Дополнительные функции. Карты безналичной оплаты можно наделять дополнительными возможностями — оплата билетов в электричках, парковок и т.п.\n\n
        5. Возможность экономить. Тариф при оплате картой должен быть ниже, чем за наличный расчет. Это заработает в Ростове в октябре 2017 года.\n\n
        Обращаем Ваше внимание: ИИС «Ростов-Транспорт» не имеет НИКАКОГО отношения к системе безналичной оплаты проезда.</string>
    <string-array name="card_questions">
        <item>Сколько стоит транспортная карта?</item>
        <item>Как пользоваться транспортной картой?</item>
        <item>Можно ли оплатить несколько билетов?</item>
        <item>Какие виды карт существуют?</item>
        <item>Что делать если не работает валидатор?</item>
        <item>Куда жаловаться если возникли проблемы?</item>
        <item>Существуют ли транспортные карты для школьников и пенсионеров?</item>
    </string-array>
    <string-array name="card_answers">
        <item>Карта «старого» образца («Ростов-Транспорт»): 60 руб.\n\nКарта «нового» образца («Простор»): ориентировочно будет стоить 100 руб. (плюс, одна поездка уже записана на счету).</item>
        <item>Для оплаты проезда транспортной картой нужно приложить ее к валидатору, находящимся рядом с водительским местом, и дождаться выдачи чека.</item>
        <item>Да, одной картой можно оплатить проезд сразу нескольких человек, приложив ее к валидатору соответствующее число раз.</item>
        <item>Транспортная карта бывает двух видов: «старая» (называется «Ростов-Транспорт», желтого цвета) и «новая» (называется «Простор»).\n\n
            Новая карта будет обладать рядом дополнительных функций (предполагается, что ей можно будет оплатить проезд в электричках, парковку и т.п.)\n\n
            Старая карта ВСЕГДА останется рабочей, даже после начала продаж новых карт.</item>
        <item>Если в автобусе не работает терминал для оплаты транспортными картами (валидатор), пассажир с транспортной картой имеет право не оплачивать проезд. Основание: общее решение перевозчиков от 28.09.2017, опубликовано на официальном сайте городской администрации http://rostov-gorod.ru/index/news/7/685780/.</item>
        <item>По всем вопросам, связанными с транспортными картами обращаться в ООО «АРПС»: ул. Социалистическая, 37; тел. +7 (863) 285-09-00. Туда же надо сообщать обо всех поломках валидаторов в транспорте (на это можно также пожаловаться в Департамент Транспорта Ростова-на-Дону: +7 (863) 253-16-22, +7 (918) 555-23-70).\n\n
            АРПС также ведёт группу поддержки в Телеграм: https://t.me/joinchat/EE0I2EQDflufd9HMfcnVVg</item>
        <item>Школьники и пенсионеры могут получить социальную транспортную карту, дающую право на 50% скидку от стоимости проезда. «Социальная карта пенсионера» оформляется в Управлении социальной защиты населения по месту регистрации, «Социальная карта учащегося» — в ООО «АРПС» (ул. Социалистическая, 37; тел. +7 (863) 285-09-00).\n\n
            Потребуется справка с места обучения и паспорт ученика. Если за ученика карту получают другие заявители (родители, школьные работники и т.п.) — требуется справка с места обучения, копия свидетельства о рождении или паспорта ученика и паспорт заявителя.\n\n
            В отличии от обычной, социальную карту можно использовать для оплаты проезда только одного человека.\n\n
            Напоминаем, что с первого октября 2015 года воспользоваться льготой в автобусах пенсионеры и школьники смогут только по социальной транспортной карте. В случае отсутствия карты придется оплатить полную стоимость проезда.\n\n
            Дополнительная информация на сайте http://rostov-transport.info/transportnaya-karta/</item>
    </string-array>
    <string name="card_buy_open_map_text">Посмотреть на карте</string>
    <string name="complain_title_how_to">Как подать жалобу?</string>
    <string name="complain_desc_how_to">
        1. Заполните обязательные поля формы и нажмите кнопку "Отправить жалобу".\n\n\
        2. Приложение сформирует полностью заполненное письмо. Нажмите "Отправить email".\n\n
        3. После получения письма мы подготовим все документы и перенаправим жалобу в департамент транспорта.
    </string>
    <string name="menu_rate_app">Оцените приложение</string>
    <string name="menu_mail_dev">Написать разработчику</string>
    <string name="complain_title_transport_type">Вид транспорта <font color="#4CAF50">*</font></string>
    <string name="complain_title_route">Номер маршрута <font color="#4CAF50">*</font></string>
    <string name="complain_title_transport_number">Бортовой или госномер транспорта <font color="#4CAF50">*</font></string>
    <string name="complain_title_time">Время <font color="#4CAF50">*</font></string>
    <string name="complain_title_place">Место совершения нарушения <font color="#4CAF50">*</font></string>
    <string name="complain_title_violations">Виды нарушений <font color="#4CAF50">*</font></string>
    <string name="complain_title_comment">Комментарий</string>
    <string name="complain_bottom_desc">После нажатия кнопки будет сформировано предзаполненное письмо, где в качестве получателя указан наш email. Мы подготовим все документы и передадим вашу жалобу в департамент транспорта</string>
    <string name="complain_transport_type_bus">Автобус</string>
    <string name="complain_transport_type_shuttlebus">Маршрутка</string>
    <string name="complain_transport_type_trolleybus">Троллейбус</string>
    <string name="complain_transport_type_tram">Трамвай</string>
    <string name="complain_hint_enter_route">Укажите маршрут</string>
    <string name="complain_hint_enter_transport_number">Укажите номер</string>
    <string name="complain_hint_enter_time">Укажите время</string>
    <string name="complain_hint_enter_place">Укажите место</string>
    <string name="complain_hint_enter_comment">Ваш комментарий</string>
    <string name="complain_sign">Отправлено из мобильного приложения Ростов-Транспорт</string>
    <string name="complain_error_check_fill">Заполните обязательные поля</string>
    <string name="complain_error_email_client_not_found">Почтовый клиент не найден</string>
    <string-array name="violation_entries">
        <item>Стоит на остановках дольше нужного</item>
        <item>Курение в салоне</item>
        <item>Грубость, хамство</item>
        <item>Опасное вождение</item>
        <item>Грубые нарушения ПДД</item>
        <item>Высадка в неположенном месте</item>
        <item>Неисправности в салоне</item>
        <item>Грязный салон, сиденья и т.п.</item>
        <item>Не выдан билет по требованию</item>
        <item>Отказ в льготном проезде</item>
        <item>Не выдана сдача</item>
        <item>Разговор по телефону во время вождения</item>
        <item>Другое</item>
    </string-array>
    <string name="complain_email">mail@rostov-transport.info</string>
    <string name="complain_email_subject">Жалоба на общественный транспорт</string>
    <string name="about_header_title">Коротко о проекте</string>
    <string name="about_header_content">
        «Ростов-Транспорт» — это информационно-аналитическое справочное издание, предоставляющее читателям транспортную информацию, новости, схемы маршрутов движения, данные по местоположению транспорта онлайн, статьи, транспортную аналитику и возможность передать жалобу или предложение в соответствующие инстанции.\n\n
        Также «Ростов-Транспорт» — разработчик многих общественных инициатив в области транспорта и дорожного комплекса.
    </string>
    <string name="about_card_title">Обращаем внимание</string>
    <string name="about_card_content">
        Ростов-Транспорт — это НЕ Департамент транспорта Ростова-на-Дону, НЕ Министерство транспорта Ростовской области, НЕ ГИБДД Ростовской области, НЕ справочная автовокзалов/вокзалов/аэропортов, НЕ Департамент автодорог Ростова-на-Дону, НЕ перевозчик по каким-либо направлениям или маршрутам, НЕ оператор системы безналичной оплаты проезда.\n\n
        Мы НЕ располагаем парком автобусов, НЕ сдаем их в аренду, НЕ перевозим грузы, НЕ строим и НЕ ремонтируем дороги.
    </string>
    <string name="about_contacts_title">Контакты</string>
    <string name="state_no_data">Нет данных</string>
    <string name="state_error_loading">Не удалось загрузить данные</string>
    <string name="cd_img_map_background">Скриншот Google Карты с улицей Пушкинская</string>
</resources>