<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/nav_group_top">
        <item
            android:id="@+id/nav_item_news"
            android:icon="@drawable/ic_nav_news_24px"
            android:title="@string/nav_item_news"/>
        <item
            android:id="@+id/nav_item_routes"
            android:icon="@drawable/ic_nav_routes_24px"
            android:title="@string/nav_item_routes"/>
        <item
            android:id="@+id/nav_item_schedule"
            android:icon="@drawable/ic_nav_schedule_24px"
            android:title="@string/nav_item_schedule"/>
        <item
            android:id="@+id/nav_item_transport_online"
            android:icon="@drawable/ic_nav_transport_online_24px"
            android:title="@string/nav_item_transport_online"/>
    </group>

    <group android:id="@+id/nav_group_middle">
        <item
            android:id="@+id/nav_item_help"
            android:icon="@drawable/ic_nav_help_24px"
            android:title="@string/nav_item_help"/>
        <item
            android:id="@+id/nav_item_transport_card"
            android:icon="@drawable/ic_nav_transport_card_24px"
            android:title="@string/nav_item_transport_card"/>
        <item
            android:id="@+id/nav_item_complain"
            android:icon="@drawable/ic_nav_complain_24px"
            android:title="@string/nav_item_complain"/>
    </group>

    <group android:id="@+id/nav_group_bottom">
        <item
            android:id="@+id/nav_item_about"
            android:icon="@drawable/ic_nav_about_project_24px"
            android:title="@string/nav_item_about"/>
    </group>
</menu>